--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,17 @@
     <string name="facebookP3">https://www.facebook.com/edy.oliva.5</string>
     <string name="twitterP3">https://twitter.com/edyoliiva</string>
     
+    <!-- PERSONA 6 -->
+    <string name="nombreP6">Jeffrey Aplicano</string>
+    <string name="descripcionP6">Futuro Ingeniero en Infotecnologia</string>
+    <string name="edadP6">22</string>
+    <string name="carreraP6">Ingeniería en Infotecnología</string>
+    <string name="estadocivilP6">Soltero</string>
+    <string name="telefonoP6">97601735</string>
+    <string name="emailP3">jeffrey.aplicano@ujcv.edu.hn</string>
+    <string name="facebookP3">https://www.facebook.com/jeffalexander.mejia.9</string>
+    <string name="twitterP3">https://twitter.com/</string>
+    
  <!-- PERSONA 8 -->
     <string name="nombreP8">Martha Haydé Benítez Gómez</string>
     <string name="descripcionP8">Eyes cannot see what your mind does not understand</string>
