--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,18 @@
     <string name="emailP9">paolaalebd@gmail.com</string>
     <string name="facebookP9">https://www.facebook.com/paolaale.betancourt</string>
     <string name="twitterP9">https://twitter.com/Paolaalebd?lang=es</string>
+    
+     <!-- PERSONA 10 -->
+    <string name="nombreP9">Yenis Yanahi Caceres Martinez</string>
+    <string name="descripcionP9">Estudiante de Ingenieria y Lectora Empedernida</string>
+    <string name="edadP9">19</string>
+    <string name="carreraP9">Ingeniería en Infotecnología</string>
+    <string name="estadocivilP9">Soltera</string>
+    <string name="telefonoP9">873307304</string>
+    <string name="emailP9">myeni2137@gmail.com</string>
+    <string name="facebookP9">https://https://www.facebook.com/yenis.martinez.35</string>
+    <string name="twitterP9">https://https://twitter.com</string>
+
 
 
 
